xorg-server (2:1.17.2-2) UNRELEASED; urgency=medium

  * logind support

 -- Julien Cristau <jcristau@debian.org>  Tue, 11 Aug 2015 19:40:35 +0200

xorg-server (2:1.17.2-1.1) unstable; urgency=medium

  * Non-Maintainer Upload.

  [ Sven Joachim ]
  * Install the whole usr/share/man/man4 directory into xserver-xorg-core,
    fixes FTBFS on hurd where modesetting.4 does not exist (Closes: #794644).

 -- Samuel Thibault <sthibault@debian.org>  Tue, 11 Aug 2015 10:45:35 +0200

xorg-server (2:1.17.2-1) unstable; urgency=medium

  [ Sven Joachim ]
  * New upstream release.
    + symbols: Fix sdksyms.sh to cope with gcc5 (Closes: #778187)
    + os/access: fix regression in server interpreted auth (Closes: #784687)
    + dix: Fix image byte order on big endian hardware (Closes: #785474)
    + int10: Fix error check for pci_device_map_legacy (Closes: #787144)
    + modesetting: Include dix-config.h from dumb_bo.c (Closes: #789823)
    + unauthorised local client access in XWayland [CVE-2015-3164]
      (Closes: #788410)
  * Install the modesetting.4 manpage into xserver-xorg-core (Closes: #789646)
  * Build xserver-xorg-core-udeb on all architectures again (Closes: #775205)
  * Update debian/upstream/signing-key.asc.

 -- Julien Cristau <jcristau@debian.org>  Wed, 01 Jul 2015 18:07:40 +0200

xorg-server (2:1.17.1-2) unstable; urgency=medium

  * Disable libdrm support on hurd and in the kfreebsd udeb build, so we don't
    try building the modesetting driver without libdrm.  We should probably
    revisit this later and ship modesetting_drv.so in d-i, but this should do
    for now.

 -- Julien Cristau <jcristau@debian.org>  Mon, 04 May 2015 22:04:01 +0200

xorg-server (2:1.17.1-1) experimental; urgency=medium

  [ Maarten Lankhorst ]
  * New upstream release 1.17.1.
  * Enable the modesetting driver from xorg-server.
  * Drop upstreamed patches:
    - 09_Xserver-man-iglx.diff
  * Disable 08_xfree86_fix_ia64_inx_outx.diff, no longer applies.