@@ -1,11 +1,15 @@
 main/usr/lib/xorg/modules	usr/lib/xorg
 main/usr/bin/Xorg	usr/bin
+main/usr/bin/X		usr/bin
 main/usr/share/man/man1/Xorg.1	usr/share/man/man1
+main/usr/share/man/man1/Xorg.wrap.1	usr/share/man/man1
 main/usr/share/man/man4		usr/share/man/
 main/usr/share/man/man5/xorg.conf.5	usr/share/man/man5
 main/usr/share/man/man5/xorg.conf.d.5	usr/share/man/man5
+main/usr/share/man/man5/Xwrapper.config.5	usr/share/man/man5
 main/usr/bin/cvt	usr/bin
 main/usr/bin/gtf	usr/bin
 main/usr/share/man/man1/cvt.1	usr/share/man/man1
 main/usr/share/man/man1/gtf.1	usr/share/man/man1
 main/usr/share/X11/xorg.conf.d	usr/share/X11/
+main/usr/lib/xorg-server	usr/lib
