@@ -1,6 +1,7 @@
 xorg-server (2:1.17.2-2) UNRELEASED; urgency=medium
 
   * logind support
+  * setuid wrapper
 
  -- Julien Cristau <jcristau@debian.org>  Tue, 11 Aug 2015 19:40:35 +0200
 
